force-app/main/default/objects/Known_Issues__c/Known_Issues__c.object-meta.xml
<CustomObject>
    <label>Known Issues</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Known Issues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>