force-app/main/default/objects/Known_Issues__c/fields/Customer_Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Customer_Desired_Outcome__c</fullName>
    <description>Free text explaining the desired outcome of the complaint raised</description>
    <label>Customer Desired Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>