force-app/main/default/objects/Known_Issues__c/fields/Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue__c</fullName>
    <description>Description of issue</description>
    <label>Description of Issue</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>