force-app/main/default/objects/Known_Issues__c/fields/IDR_Account_Card_Policy_Number_3__c.field-meta.xml
<CustomField>
    <fullName>IDR_Account_Card_Policy_Number_3__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Account/Policy the issue relates
to. Contents will be automatically
masked leaving last 4 digits identifiable</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account/Policy Number 3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>