force-app/main/default/objects/Known_Issues__c/fields/IDR_Channel_Received__c.field-meta.xml
<CustomField>
    <fullName>IDR_Channel_Received__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Non_Personal_Information</complianceGroup>
    <description>What channel did this originate from (In person, Phone, Secure Mail, Social Media, Letter, Email, Internal Referred, anz.com)</description>
    <label>Channel Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>In Person</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <default>true</default>
                <label>Phone</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Secure Mail</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Social Media</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Letter</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Internal Referred</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>anz.com</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>CEO Complaint</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Board Complaint</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Referred from AFCA</label>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>ANZ Plus App</fullName>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Other EDR Schemes or Tribunal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>