force-app/main/default/objects/Known_Issues__c/fields/IDR_Complaint_Outcome__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Outcome__c</fullName>
    <description>Free text explaining the outcome of the complaint</description>
    <label>Complaint Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>In favour of customer in full</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>In favour of customer in part</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>In favour of ANZ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>