force-app/main/default/objects/Known_Issues__c/fields/IDR_Complaint_Remedy_3__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Remedy_3__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The actions that were required to remedy the complaint</description>
    <label>Complaint Remedy 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Financial remedy</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Credit approved remedy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non-financial remedy</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Referred to other financial firm or manufacturer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>