force-app/main/default/objects/Known_Issues__c/fields/IDR_Complaint_Sub_Remedy_3__c.field-meta.xml
<CustomField>
    <fullName>IDR_Complaint_Sub_Remedy_3__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sub categorization of complaint remedy 3 field</description>
    <label>Complaint Sub Remedy  3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IDR_Complaint_Remedy_3__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Compensation for financial loss due to ANZ error</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Compensation for non-financial loss due to ANZ error</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Goodwill payment where no ANZ error</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Credit reporting amendment</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Co-borrower release</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Debt waiver</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Default listing amendment</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Guarantee release</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Life tenancy</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Loan restructure</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Moratorium</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Repayment history information (RHI) amendment</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Settle for less</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>SEAR and capitalisation of arrears</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Time to sell, refinance or surrender</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Apology</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Customer details updated</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Documents Provided</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Informed customer of Policy/procedure</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Feedback passed to internal stakeholder</label>
            </value>
            <value>
                <fullName>Zurich</fullName>
            </value>
            <value>
                <fullName>IOOF</fullName>
            </value>
            <value>
                <fullName>CGU</fullName>
            </value>
            <value>
                <fullName>QBE</fullName>
            </value>
            <value>
                <fullName>CMC Markets</fullName>
            </value>
            <value>
                <fullName>Allianz</fullName>
            </value>
            <value>
                <fullName>Netwealth</fullName>
            </value>
            <value>
                <fullName>Worldline</fullName>
            </value>
            <value>
                <fullName>99</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Reward Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>