force-app/main/default/objects/Known_Issues__c/fields/IDR_Customer_Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>IDR_Customer_Desired_Outcome__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <description>Free text explaining the desired outcome of the complaint raised</description>
    <inlineHelpText>Provide a detailed, accurate and grammatically correct description of the customer&apos;s desired outcome - regardless of whether ANZ is able to achieve this outcome</inlineHelpText>
    <label>Customer Desired Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>