force-app/main/default/objects/Known_Issues__c/fields/IDR_Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>IDR_Description_of_Issue__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Description of issue</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Provide a detailed, accurate and grammatically correct description of the customer&apos;s concern, from Customer&apos;s perspective. This field should not display subjective comments from your, or ANZ&apos;s perspective.</inlineHelpText>
    <label>Description of Issue</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>