force-app/main/default/objects/Known_Issues__c/fields/IDR_Description_of_Outcome__c.field-meta.xml
<CustomField>
    <fullName>IDR_Description_of_Outcome__c</fullName>
    <description>Description of Complaint Outcome</description>
    <label>Description of Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>