force-app/main/default/objects/Known_Issues__c/fields/IDR_Is_there_another_issue__c.field-meta.xml
<CustomField>
    <fullName>IDR_Is_there_another_issue__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify whether the complaint has second issue</description>
    <label>Is there another issue?</label>
    <type>Checkbox</type>
</CustomField>