force-app/main/default/objects/Known_Issues__c/fields/IDR_Issue_Type_2__c.field-meta.xml
<CustomField>
    <fullName>IDR_Issue_Type_2__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The categorisation of second issue</description>
    <label>Issue Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
                <label>Service quality</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Channel accessibility</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Account set-up &amp; maintenance</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Fees, interest, rewards</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Financial difficulty &amp; hardship</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Collections</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Lending fulfilment</label>
            </value>
            <value>
                <fullName>l5</fullName>
                <label>Product features, offers, sales</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Closure process</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Credit assessment</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Credit reporting</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Remediation</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Transactions &amp; payments</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Fraud &amp; Scams</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Transaction Disputes</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Privacy and Confidentiality</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Advice</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Insurance Claims</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Disclosure</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Organisational Structure &amp; Marketing</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Know Your Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>