force-app/main/default/objects/Known_Issues__c/fields/IDR_Non_Financial_Remedy__c.field-meta.xml
<CustomField>
    <fullName>IDR_Non_Financial_Remedy__c</fullName>
    <label>Non-Financial Remedy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>Customer details updated</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Educated customer on Policy/procedure</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Apology</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Feedback passed to internal stakeholder</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Provision of assistance/support</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Updated terms of contract</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Ceased legal or other action</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Corrected incorrect or out of date records</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Declined Request</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Amend Credit Report</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Documents Provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>