force-app/main/default/objects/Known_Issues__c/fields/IDR_Priority__c.field-meta.xml
<CustomField>
    <fullName>IDR_Priority__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Non_Personal_Information</complianceGroup>
    <description>Priority of the Known Issue  as per ANZ process guidelines.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Financial Hardship</fullName>
                <label>Customer experiencing financial hardship</label>
            </value>
            <value>
                <fullName>Vulnerable Customer</fullName>
                <label>Customer experiencing vulnerability</label>
            </value>
            <value>
                <fullName>Customer in Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>